<resources>
    <string name="app_name">Central Food</string>
    <string name="password"><b>Password</b></string>
    <string name="password_hint">Password</string>
    <string name="email"><b>E-mail</b></string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome to</string>
    <string name="insert_your_email">Insert your e-mail</string>
    <string name="central_food_logo">Central Food Logo</string>
    <string name="forgot_your_password"><b><u>Forgot your password?</u></b></string>
    <string name="are_you_new_here">Are you new here?</string>
    <string name="invalid_login_toast">Invalid email or password</string>
    <string name="unexpected_error_toast">Unexpected error</string>
    <string name="empty_field_toast">Please type your email and password</string>
    <string name="hello">Hello!</string>
    <string name="come_change_the_world_with_us">Come change the world with us!</string>
    <string name="you_are">You are:</string>
    <string name="merchant">Merchant</string>
    <string name="or">OR</string>
    <string name="ngo">NGO</string>
    <string name="register_now">Register now!</string>
    <string name="register_subtitle">Get in touch with amazing NGOs!\nLet\'s fight hunger together!</string>
    <string name="full_name">Full name</string>
    <string name="full_name_hint">Insert here your full name</string>
    <string name="email_title">E-mail</string>
    <string name="email_hint">Insert your e-mail</string>
    <string name="password_signup_hint">Create a password</string>
    <string name="confirm_your_password">Confirm your password</string>
</resources>