<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".presentation.signup.MerchantSignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/rectangle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/rounded_background"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="500dp">

                <TextView
                    android:id="@+id/register_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bellota_bold"
                    android:text="@string/register_now"
                    android:textAlignment="center"
                    android:textColor="@color/titleColor"
                    android:textSize="40sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/register_subtitle"
                    android:textAlignment="center"
                    android:textColor="@color/titleColor"
                    app:layout_constraintTop_toBottomOf="@id/register_title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_white_background"
                    android:padding="7dp"
                    app:layout_constraintTop_toBottomOf="@id/subtitle"
                    tools:layout_editor_absoluteX="-38dp">

                    <br.com.fomezero.centralfood.layouts.InputTextLayout
                        android:id="@+id/fullNameInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:inputTitle="@string/full_name"
                        app:inputHint="@string/full_name_hint"
                        app:inputType="textPersonName"/>

                    <br.com.fomezero.centralfood.layouts.InputTextLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        app:inputTitle="@string/email_title"
                        app:inputHint="@string/email_hint"
                        app:inputType="textEmailAddress" />

                    <br.com.fomezero.centralfood.layouts.InputTextLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        app:inputTitle="@string/password"
                        app:inputHint="@string/password_signup_hint"
                        app:inputType="textPassword" />

                    <br.com.fomezero.centralfood.layouts.InputTextLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        app:inputTitle="@string/confirm_your_password"
                        app:inputHint="@string/confirm_your_password"
                        app:inputType="textPassword" />

                    <br.com.fomezero.centralfood.layouts.InputTextLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="9dp"
                        app:inputTitle="Cellphone number"
                        app:inputHint="Country code DDD phone number"
                        app:inputType="phone" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>