<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.signup.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/textGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/rectangle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bellota_bold"
                android:text="@string/hello"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="60sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textSize="20sp"
                android:text="@string/come_change_the_world_with_us"
                android:textColor="@color/black" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rectangle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="57dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:paddingBottom="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="500dp">

            <TextView
                android:id="@+id/you_are"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/you_are"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/you_are">

                <Button
                    android:id="@+id/merchantButton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:background="@drawable/secondary_dark_button_border"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/merchant"
                    android:textAllCaps="false"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/neutral"
                    android:text="@string/or" />

                <Button
                    android:id="@+id/ngoButton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:background="@drawable/secondary_dark_button_border"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/ngo"
                    android:textSize="20sp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>