<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".activities.LoginActivity">

        <TextView
            android:id="@+id/welcomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bellota_regular"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:paddingBottom="12dp"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeTextView">

            <ImageView
                android:id="@+id/logoText"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:contentDescription="@string/central_food_logo"
                android:src="@drawable/ic_logo_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:padding="8dp"
                android:background="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logoText">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/insert_your_email">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/emailField"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:background="@drawable/input_box_border"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        app:placeholderText="@string/insert_your_email" />
                </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="32dp"
                            android:hint="@string/password"
                            app:passwordToggleEnabled="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/emailInputLayout">

                            <androidx.appcompat.widget.AppCompatEditText
                                android:id="@+id/passwordField"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:background="@drawable/input_box_border"
                                android:ems="10"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>



            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginForm"
                android:text="@string/forgot_your_password"/>

        </androidx.constraintlayout.widget.ConstraintLayout>






        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/loginButton"-->
        <!--            android:layout_width="186dp"-->
        <!--            android:layout_height="62dp"-->
        <!--            android:layout_marginTop="76dp"-->
        <!--            android:background="@drawable/secondary_dark_button_border"-->
        <!--            android:shadowColor="@color/black"-->
        <!--            android:text="@string/login"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="27sp"-->

        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.498"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/passwordField" />-->

        <!--        <androidx.appcompat.widget.AppCompatButton-->
        <!--            android:id="@+id/signUpButton"-->
        <!--            android:layout_width="186dp"-->
        <!--            android:layout_height="62dp"-->
        <!--            android:layout_marginTop="76dp"-->
        <!--            android:background="@drawable/primary_button_border"-->
        <!--            android:shadowColor="@color/black"-->
        <!--            android:text="@string/sign_up"-->
        <!--            android:textAllCaps="false"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="23sp"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/loginButton" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>



